added 3 of the latest blog posts and updated displayAdsOnRight to support single Ads

--- a/markdown/post0001.mdx
+++ b/markdown/post0001.mdx
@@ -13,6 +13,7 @@ Be sure to read below for a party planning 101 guide on how to calculate the ser
 sizes of food for your guests.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## 1. Invest in an Event Planning Tool
 
@@ -65,6 +66,7 @@ that you should offer one pound of food for every adult in attendance. If there 
 then calculate 1/2 pound for each of them.
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## 3. Careful With Variety
 
@@ -93,6 +95,7 @@ However, if your event is in those in-between spots, such as 10am to 11am or 3pm
 you can get away with serving lighter portions.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## 5. Offer Different Platters
 
@@ -124,4 +127,7 @@ If you need people to pitch in to help with food preparations, you may want to c
 Be sure to read this article for more information on [planning outdoor events](https://pitchinclub.com/blog/outdoor-events-everything-you-need-to-consider) 
 and everything that you should think through.
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
