--- a/markdown/post0002.mdx
+++ b/markdown/post0002.mdx
@@ -17,6 +17,7 @@ Want to know more? Then you're in the right place. Read on to find out everythin
 post-party cleanup.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Planning Your Post-Party Cleanup
 
@@ -40,6 +41,7 @@ With that in mind, let's take a look at five top tips on the after-party cleanin
 cleanup as smooth as possible. 
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## 1. Get Air Flowing Through Your Home
 
@@ -73,6 +75,7 @@ If you have a dishwasher, stack this straight away and set it going once it's fu
 job while you get on with the rest!
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## 3. Start With the Room Farthest From the Kitchen
 
@@ -106,6 +109,7 @@ Before using these make sure that you read the instructions to ensure you don't 
 These will usually need to soak for a while before you clean them off, so apply your stain remover early in the day.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## 5. Do the Floors Last
 
@@ -135,4 +139,8 @@ coming and who was nice enough to offer a helping hand. That’s it!
 For more great hosting tips, check out
 [our Party Planning 101](https://pitchinclub.com/blog/party-planning-101-everything-you-need-to-know)
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
+
