--- a/markdown/post0003.mdx
+++ b/markdown/post0003.mdx
@@ -11,6 +11,7 @@ When done right, delegation is a win for all involved. So if you want to discove
 check out the 5 expert tips below.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Delegating Tasks Effectively
 
@@ -23,6 +24,9 @@ output and efficiency, but it will help them to develop their abilities too. So 
 When you're assigning a task to someone, it helps to explain to them why you're giving it to them. This not only 
 puts them more at ease, but it's also a chance to let them know you understand their value and that it's an opportunity 
 to branch out and expand their skills.
+
+<MobileAd />
+<DesktopAdHoriz />
 
 ## 2. Pick The Right Person
 
@@ -40,6 +44,9 @@ To ensure that an individual can take on and
 set effectively, it's vital that you give them all the instructions, training, and resources they need at the start. This means you're not 
 having to check up on them frequently to ensure it is being done correctly.
 
+<MobileAd />
+<DesktopAdSquare />
+
 ## 4. Be Clear on What You Want
 
 Try not to overload them with information. Just give them the basics and let them know what is expected of them, what the desired 
@@ -55,6 +62,8 @@ high regard and trust them with important tasks. Also, show your gratitude towar
 [productive feedback](https://medium.com/hr-blog-resources/8-golden-rules-for-giving-positive-productive-feedback-at-work-1ad5c88b6c36)
 that'll help them progress further and strive to do well.  
 
+<DesktopAdHoriz />
+
 ## Delightful Delegation
 
 Delegating tasks not only help workload efficiency among teams, but it's essential to effective leadership and achieving productivity 
@@ -66,4 +75,7 @@ commitment. If you're getting overloaded with work, don't be afraid to use your 
 For more ideas on getting organized and productive, check out our latest 
 [blog articles here](https://pitchinclub.com/blog/page/1).
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
