--- a/markdown/post0004.mdx
+++ b/markdown/post0004.mdx
@@ -15,6 +15,7 @@ should make to keep yourself covered (literally and figuratively).
 Read on for our advice.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## The Weather is King
 
@@ -51,7 +52,8 @@ This is even more effective if the threat is communicated before anything happen
 
 Once the clouds begin to darken or the temperature hits a certain level you should be on the move.
 
-<MobileAd /> 
+<MobileAd />
+<DesktopAdHoriz />
 
 ## You Need a Second Location
 
@@ -88,6 +90,7 @@ you and your guests from mild weather disturbances and the sun.
 Even if you don't think that you'll need a tent, get one anyway. You'll thank yourself later. 
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## Consider The Dress Code
 
@@ -114,6 +117,7 @@ You don't just have to worry about your event being too dim or too quiet, you al
 or too loud. You don't want to upset nearby neighbors. 
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Do You Have Any Outdoor Events on Your Calender?
 
@@ -123,4 +127,7 @@ avoiding outdoor event disaster and you should be covered.
 For more information about event planning, or to get our helpful event planning tool to make the whole 
 process a breeze, [visit our site](https://pitchinclub.com/resources/how-to-create-event).
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
