--- a/markdown/post0005.mdx
+++ b/markdown/post0005.mdx
@@ -19,6 +19,7 @@ A housewarming is just the way to do this. Read on to learn how to throw a house
 party to show off your new home and see friends, old and new. 
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## History of the Housewarming Party
 
@@ -41,6 +42,7 @@ and share your pride in your new home.
 Let's take a closer look at things to consider when planning your housewarming party.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Invitations and Guest List
 
@@ -72,6 +74,7 @@ You could also throw a housewarming-related theme party. Maybe you need some hel
 to throw a Help Me Out party. You provide food, drinks, and music while your friends pitch in to help.
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## Decorations
 
@@ -100,6 +103,9 @@ You can even set up
 [an online organizer](https://pitchinclub.com/resources/contribution-list)
 so your friends can put down what they plan to bring.
 
+<MobileAd />
+<DesktopAdHoriz />
+
 ## Games
 
 You will know what's best for your party. Some groups of friends love a party with some
@@ -116,8 +122,6 @@ letters in house.
 
 Games are an especially fun way to get old and new friends interacting with each other. 
 
-<MobileAd />
-
 ## Tours
 
 You are throwing a party to celebrate your new house. Be prepared to give your guests a tour of your new home. 
@@ -129,6 +133,9 @@ It's fun to show guests the before with photos if you have done major renovation
  
 As you prepare for the party, focus on clean-up knowing your party guests will likely want to see the house.
  
+<MobileAd />
+<DesktopAdHoriz />
+
 ## Throw an Easy and Fun House Warming Party at Your New House
 
 A house warming party is a great way to celebrate your new home. You can gather old friends and make new 
@@ -139,4 +146,7 @@ It's also a way to begin making memories in your new home.
 For help with all your party planning needs, be sure to 
 [visit our website](https://pitchinclub.com/resources/about-us)
  
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
