--- a/markdown/post0007.mdx
+++ b/markdown/post0007.mdx
@@ -10,6 +10,7 @@ That said, strong volunteer event planning requires organization. Having free ha
 direction can cause more chaos.
 
 <Mobile />
+<DesktopAdHoriz />
 
 ## Volunteer Event Planning
 
@@ -29,6 +30,7 @@ The more information you can give your volunteers, the better, so they know what
 Planning a volunteer event means *you're the planner*. Not having these details can make for a confused team.
 
 <Mobile />
+<DesktopAdHoriz />
 
 ## Event Planning Volunteer Checklist
 
@@ -49,6 +51,7 @@ You can either assign duties or have sign-up sheets for people to choose their
 duties and time slots. Giving some freedom to your volunteers keeps folks happy and collaborative.
 
 <Mobile />
+<DesktopAdSquare />
 
 ## 3. Give Rewards for Helping
 
@@ -68,6 +71,7 @@ events take a village, and volunteers are that village. Making an impression on 
 Make people feel valued and they'll keep coming back for future events!
 
 <Mobile />
+<DesktopAdHoriz />
 
 ## Event Planning Gone Right
 
@@ -81,4 +85,7 @@ as much for your team as it is for you.
 [Sign Up Today](https://pitchinclub.com)
 to see how you can make a difference with volunteer event planning!
 
-<Mobile />
+<MobileAdSquare />
+<MobileAd />
+
+<DesktopAdSquare />
