--- a/markdown/post0008.mdx
+++ b/markdown/post0008.mdx
@@ -7,6 +7,7 @@ throw the perfect watch party! Whether you're looking to host in the comfort of 
 or you'd like to keep it online, no worries. We've got you covered.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## What is a Watch Party?
 
@@ -27,6 +28,7 @@ watch together, then this part is basically done. Just make sure with them that 
 binge the season or trilogy.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Invites and Headcounts
 
@@ -51,6 +53,7 @@ who is attending and who is bringing what to the party. The free service is a gr
 stress of planning a watch party.
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## A Virtual Alternative
 
@@ -66,4 +69,7 @@ If the stress of party planning is overwhelming, be sure to check out our event 
 this article and would like to see more like it, be sure to check out the rest of
 [our blog](https://pitchinclub.com/blog/page/1)
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
