--- a/markdown/post0009.mdx
+++ b/markdown/post0009.mdx
@@ -8,6 +8,7 @@ to give you some tips to get your church event calendar full of organized events
 Continue reading to find out more.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Create a Monthly Calendar
 
@@ -23,6 +24,7 @@ overspending on supplies
 and getting things that are needed for the event versus things that are wanted.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Try a Potluck
 
@@ -44,6 +46,7 @@ food items not to forget the things they signed up to bring. Using
 is just what your church needs to get people talking about the upcoming event.
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## Have an Event Plan
 
@@ -62,4 +65,7 @@ If you're not quite grasped the art of planning an event, that's okay sign up to
 [event planning tracker](https://pitchinclub.com).
 It'll help you exceed your event planning goals every time.
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
