--- a/markdown/post0011.mdx
+++ b/markdown/post0011.mdx
@@ -21,6 +21,8 @@ makes it simple to not only plan the party, but to get help from others who can 
 or track who’s willing to help with pre-party errands, setup, and even the dreaded cleanup. You’re not 
 alone and stuck with every aspect of the event, which also allows you to enjoy the celebration. 
 
+<DesktopAdHoriz />
+
 ## Pick a Venue and Schedule the Event
 
 Sometimes a private home or backyard is the perfect space for a farewell party celebration. Other times, 
@@ -34,6 +36,7 @@ schedules are packed, make sure your guest(s) of honor are indeed available and 
 their own farewell party. 
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Create a Helping Hands and Contribution List
 
@@ -66,4 +69,7 @@ party plan and host like a pro.
 If not ready for planning just yet, you may want to check out our
 [for other event planning ideas](https://pitchinclub/blog/page/1).
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
