--- a/markdown/post0012.mdx
+++ b/markdown/post0012.mdx
@@ -27,6 +27,7 @@ the bigger musical acts. Looking into some new or local artists will reduce your
 significantly and you'll be able to cut out the costs of travel too.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## 2. Set a Timeline
 
@@ -55,6 +56,7 @@ If you'll be organizing a concert in a suburban town, think about reaching out t
 Doing some research on social media will help you figure out the popularity of an artist in your area.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## 4. Choose the Perfect Venue
 
@@ -79,6 +81,7 @@ some fees in order to rent out the space for your event. You don't want to make 
 the permits and losing a venue days before your event. 
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## 6. Finalize All the Event Details
 
@@ -105,6 +108,7 @@ promote your event like posting flyers at frequently visited parts of town, or c
 event, and you can't forget about the power of social media.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## 8. Stay organized with an event planning checklist 
 
@@ -120,4 +124,7 @@ top tips for planning a successful event.
 For other event planning ideas, check out our
 [blog](https://pitchinclub.com/blog/page/1)
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
