--- a/markdown/post0013.mdx
+++ b/markdown/post0013.mdx
@@ -19,6 +19,7 @@ And, even if you don't have a membership to a bulk retailer, some retailers will
 alcohol without a membership. So check out your nearest bulk retailer today!
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## 2. Keep It Simple
 
@@ -43,6 +44,7 @@ If you think you are going to be over budget use an app like the
 [Pitch In Club](https://pitchinclub.com), to see if others would like "pitch in".
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## 4. Stick to Snacks
 
@@ -65,6 +67,7 @@ options out there you can try out! Get creative with your array of fabulous snac
 miss not having a full meal at your next awesome sports party.
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## 5. Limit the Guest List
 
@@ -89,6 +92,8 @@ If you're super worried about a power or technical issue happening on the night 
 you can borrow or buy a generator as a backup in case of an emergency. But really, there is no reason to 
 rent out an expensive location for your sports party, so stay home and save the cash!
 
+<DesktopAdHoriz />
+
 ## 7. Get Creative
 
 There are a ton of other, creative ways you can save money when throwing your sports party. You can have 
@@ -110,4 +115,7 @@ the big game!
 
 For more event planning tips, check out our [blog](https://pitchinclub.com).
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
