--- a/markdown/post0014.mdx
+++ b/markdown/post0014.mdx
@@ -16,12 +16,13 @@ and here's how to do just that.
 A potluck is best when it's an informal affair, so set it up as an open house rather than as a sit-down dinner in a narrow time 
 slot. Letting people come and go on their own schedule will allow more guests to stop by to enjoy the fun.
 
+<DesktopAdHoriz />
+
 ## Consider a Theme
 Potluck parties are great because everyone brings a dish, but leaving your menu wide open can actually be overwhelming for 
 guests. If you narrow the scope to a certain type of cuisine (think "Southern BBQ" or "Tex-Mex night"), you'll ensure that 
 everything tastes great together and give your guests a gentle nudge in the right direction.
 
-<MobileAd />
 
 ## Provide an Online Sign Up Sheet
 
@@ -30,6 +31,8 @@ sheet so guests can plan accordingly. Try the [Pitch In Club app](https://pitchi
 online food sign up sheet that guests can refer to with their phones. It also helps the host see what 
 still needs to be covered for any last-minute shopping trips.
 
+<MobileAd />
+<DesktopAdHoriz />
 
 ## Opt for Individual Drinks
 
@@ -38,6 +41,7 @@ ice chests: one for adult beverages and the other for soft drinks, juice pouches
 As guests arrive they can add to the coolers so there's always a cold one ready as people need refreshment.
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## Choose Make-Ahead Dishes
 
@@ -56,6 +60,7 @@ hot dogs, chicken tenders, or PB&J sandwiches cut into quarters. Provide little 
 or carrot sticks to keep messy hands out of the dip bowl — the adults will thank you for this, too!
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Make Room for Dessert
 
@@ -78,5 +83,8 @@ and clear communication with guests, you can create a super-fun celebration for 
 Hope these tips were helpful. For more event planning tips, check out our
 [blog](https://pitchinclub.com/blog/page/1).
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
 
