--- a/markdown/post0015.mdx
+++ b/markdown/post0015.mdx
@@ -30,6 +30,7 @@ These invitations can include things like setting up tables and chairs, arrangin
 ordering catering.                                                            
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Create a Team To-Do List
 
@@ -53,6 +54,7 @@ everyone that you value their ideas and gets you a wide range of different possi
 When everyone puts their heads together to make a to-do list as a team, more gets accomplished.                                                        
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Have a Volunteer Sign-Up Sheet
 
@@ -72,6 +74,7 @@ for specific tasks they feel comfortable with.
 That way, everyone is doing a little something, and everyone can still enjoy the festivities.
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## Orchestrate a Potluck
 
@@ -87,6 +90,7 @@ This will ensure that everyone has something that they can enjoy. You don't want
 certainly don't want a surprise ambulance call because someone ate something they were allergic to!
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Make Participation a Game
 
@@ -104,6 +108,7 @@ The basic gist will be that the more tasks you sign up for, the more raffle tick
 way to get more people pumped about doing their part for the block party!
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Throw an Awesome Neighborhood Block Party
 While having a block party is a lot of fun, planning the event can be quite a stressor if you don't organize properly.
@@ -116,4 +121,7 @@ everything runs smoothly.
 Hope these tips were helpful. If you would like to learn about other event planning tips, 
 please check out our [blog](https://pitchinclub.com/blog/page/1)
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
