--- a/markdown/post0016.mdx
+++ b/markdown/post0016.mdx
@@ -32,6 +32,7 @@ Volunteer tracking software takes the stress out of organizing for the planner, 
 other aspects of the event. It gives you that extra level of communication and infrastructure that you wouldn't have otherwise.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Let Your Volunteers Know Their Value 
 
@@ -77,6 +78,7 @@ fundraisers, or church BBQs you can create sign up sheets and designate roles fo
 developing links in the community and bringing people together for a good cause. 
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## There is No Harm Asking 
 
@@ -94,4 +96,7 @@ We hope this guide of volunteer tracking tools and tips has given you the inform
 If you would like to find out about other event planning tips, check out our
 [blog](https://pitchinclub.com/blog/page/1).
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
