--- a/markdown/post0017.mdx
+++ b/markdown/post0017.mdx
@@ -37,6 +37,8 @@ Other options include:
 Don’t forget the cleaning! You’ll want a clean house before the event, and you’ll want to clean up afterward, 
 so volunteers will be welcome at both ends.
 
+<DesktopAdSquare />
+
 Having access to easy party planning through the Pitch In Club spreads out the responsibilities and to-do lists so one or 
 two people don’t feel overwhelmed trying to keep track of every detail. Getting more people involved can also reduce any 
 possible tensions from one person missing the game while running around taking care of details, while the guests do nothing 
@@ -57,4 +59,7 @@ For more event planning tips, check out our [blog](https://pitchinclub.com/blog/
 where you can get ideas like how to get people to help with things such as
 [set up and clean up](https://pitchinclub.com/blog/party-set-up-and-after-party-clean-up)
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
