--- a/markdown/post0019.mdx
+++ b/markdown/post0019.mdx
@@ -25,6 +25,7 @@ software, and other systems on the market that will be useful for helping you ke
 what should you focus on in the process of online event planning?
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Start With the Purpose of Your Event and Invite List
 
@@ -52,6 +53,7 @@ Each of these topics should be broken down in your event planning software with 
 be able to keep track of each mini-goal along the way. You’ll also want to later report on these goals after the event.
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## Plan for Staffing and Engaging Audiences at the Event
 
@@ -77,6 +79,7 @@ debriefing with your team after the event. To learn and grow as a successful eve
 worked and what did not. Collect feedback from your client so you can improve for your next event.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Stay Organized While Managing Online Themed Event Planning
 
@@ -91,4 +94,8 @@ Thank you for checking us out. Hopefully this was helpful.
 For more event planning tips, check out our
 [blog](https://pitchinclub.com/blog/page/1)
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
+
