--- a/markdown/post0020.mdx
+++ b/markdown/post0020.mdx
@@ -15,6 +15,7 @@ track of critical tasks. Access to these tools makes it easy to
 ensure all details are accounted for as well as the people responsible for making them happen.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 Just create a “Helpings Hands” list, which is effectively a shared to do list or shared task list. 
 Then, everyone given access to the list  can volunteer for any task they feel comfortable with. The other way to get people involved is via the 
@@ -26,6 +27,7 @@ list of needs and roles, and then use the “help sign up” to get others invol
 person having to juggle everything.
 
 <MobileAd />
+<DesktopAdSquare />
 
 Getting started with a group planning effort is easy: Just create a helping Hands list and a Contributions list 
 and share away. This can benefit people who want to help but don’t know where to start, or for people who want to 
@@ -40,4 +42,7 @@ Remember, a little help goes a long way, and a shared task list is the best way 
 Thanks for checking us out. For more helping hand ideas, head over to our
 [blog](https://pitchinclub.com/blog/page/1).
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
