--- a/markdown/post0021.mdx
+++ b/markdown/post0021.mdx
@@ -27,6 +27,7 @@ and needs help with organizing the after funeral reception, or an elderly person
 someone to check up on them and drop off groceries regularly.
 
 <MobileAd />
+<DesktopAdSquare />
 
 The [Pitch In Club](https://pitchinclub.com) is a perfect way to show your friends that they’ll be 
 surrounded with support.
@@ -53,5 +54,8 @@ For more helping hand ideas, check out our [blog](https://pitchinclub.com/blog/p
 
 Thanks for checking us out.
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
 
