--- a/markdown/post0022.mdx
+++ b/markdown/post0022.mdx
@@ -20,6 +20,7 @@ event (which is easier), a family style event (requires more tables and seating)
 event (potluck style). 
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Set and Stick to a Budget
 
@@ -49,6 +50,7 @@ information in writing and read through any contracts thoroughly. Never be afrai
 discounts.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## DIY Event Needs Checklist
 
@@ -75,6 +77,7 @@ with special needs, from food allergies to mobility challenges, and make accommo
 guest has a safe and fun experience.
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## Final Thoughts
 
@@ -89,6 +92,9 @@ which makes it an ideal companion for the DIY party planner.
 Thank you for checking us out. Hopefully this was helpful. For more easy party planning tips, 
 check out our [blog](https://pitchinclub.com/blog/page/1).
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
 
 
