--- a/markdown/post0023.mdx
+++ b/markdown/post0023.mdx
@@ -14,6 +14,7 @@ Consider some of these strategies for utilizing your party help so everyone is d
 and no one person is doing  too much. 
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Set Up 
 
@@ -35,6 +36,7 @@ get more involved. For example, if it’s a retirement party for someone many pe
 willing to offer a helping hand to make it a success.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## After Party Cleanup
 
@@ -51,6 +53,7 @@ after the job is done or bringing in coffee or actual gifts. People who show up 
 So you need to make sure they know that they're appreciated.
 
 <MobileAd />
+<DesktopAdSquare />
 
 **Make it fun.** Turn ‘streamer throw-away’ into a basket-making competition. See who can (safely) 
 carry the most chairs or stack the most items on a hand truck. The more you get people laughing, the easier it will be 
@@ -62,6 +65,7 @@ would be willing to help.  If that is the case and your plate is already full,  
 coordinate the cleanup effort, so you can continue to focus on the other event planning details.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## How to ask for help
 
@@ -76,4 +80,7 @@ the merrier. That's what the "Pitch In Club" is all about.
 Thank you for checking us out. For more helping hand ideas, head to our 
 [blog](https://pitchinclub.com/blog/page/1).
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
