--- a/markdown/post0024.mdx
+++ b/markdown/post0024.mdx
@@ -22,6 +22,8 @@ with hosting a party, it’s difficult to stop the flow of unknowns.
 While it’s never a bad idea to prepare for things that may not quite go as planned at your event, 
 this philosophy can easily cross the line into overthinking, which can cause you to become 
 distracted from the things you actually need to do.
+
+<DesktopAdHoriz />
         
 **2. Be flexible when it comes to activities** 
 
@@ -40,6 +42,7 @@ worrying about seating arrangements may cause more trouble than it’s worth. Co
 for people to get to know each other than requiring them to sit next to someone specific.
     
 <MobileAd />
+<DesktopAdHoriz />
 
 **4. Err on the side of caution on your guest count** 
 
@@ -52,6 +55,8 @@ will not show. If you want to err on the side of caution, use 85% for estimating
 
 Make one to do list that covers the general things that need to get done, and the other to do list 
 for things that have a tendency to stress you out. Why, you ask ? You’ll see in the next tip.
+
+<DesktopAdSquare />
 
 **6. Get help**
 
@@ -69,6 +74,7 @@ more fulfilling and satisfying for everyone involved. Why do it all yourself? Tu
 anxieties to a fun filled group effort.
     
 <MobileAd />
+<DesktopAdHoriz />
 
 **Other ways [Pitch In Club](https://pitchinclub.com) app can help** 
     
@@ -84,4 +90,7 @@ anxiety to a minimum.
 Thank you for checking us out. Hopefully this was helpful. For more easy party planning tips, check out our 
 [blog](https://pitchinclub.com/blog/page/1)
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
