--- a/markdown/post0025.mdx
+++ b/markdown/post0025.mdx
@@ -25,6 +25,7 @@ up. It will help keep the stress at a minimum while still keeping the party movi
 need to hire professional help 
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Create a party food sign up sheet   
 
@@ -56,4 +57,7 @@ work events, and various other functions.
 Thank you for checking us out. Hopefully this was helpful. For more easy party planning tips, check out our
 [blog](https://pitchinclub.com/blog/page/1)
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
