--- a/markdown/post0027.mdx
+++ b/markdown/post0027.mdx
@@ -25,6 +25,7 @@ addition to the overall dimensions of the space. This will help you find the bes
 lay out your seating plans
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## What You’ll Need
 
@@ -58,6 +59,7 @@ But if you have a band or DJ, allow standing room space in case your guests want
 Don't forget to accommodate a stage or speaking area for the entertainment.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Create a Seating Plan and More With Pitch In Club
 
@@ -71,4 +73,7 @@ You’ll need some help along the way. This is where Pitch In Club can help. Pit
 
 [Sign up today](https://pitchinclub.com/resources/faq) to access Pitch In Club’s tools for free.
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
