--- a/markdown/post0028.mdx
+++ b/markdown/post0028.mdx
@@ -30,6 +30,7 @@ We suggest ordering a few pizzas to kick off the event. Consider asking members 
 for small donations to add to the pizza fund if they're unable to bring their own potluck food.
 
 <MobileAdSquare />
+<DesktopAdHoriz />
 
 ## Youth Group "Field Day"
 
@@ -58,6 +59,7 @@ If you're doing the event in person, consider asking people to contribute snacks
 Whether they give you money for popcorn or bring their own snacks to share, this is sure to be a fun event for people of all ages.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Church Camp Hiking or Camping Trip
 
@@ -84,6 +86,7 @@ You can choose books that teach valuable life lessons so the children can get th
 most out of this activity.
 
 <MobileAdSquare />
+<DesktopAdSquare />
 
 ## Community Clean-Up
 
@@ -120,6 +123,7 @@ do another potluck. Members of your church and your local community can donate a
 and get a tasty dinner with their friends.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Which Activities for Church Will You Try?
 
@@ -134,3 +138,6 @@ Pitch in Club might be right for you!
 [Sign up for free](https://pitchinclub.com/signup)!
 
 <MobileAdSquare />
+<MobileAd />
+
+<DesktopAdSquare />
