--- a/markdown/post0006.mdx
+++ b/markdown/post0006.mdx
@@ -7,6 +7,7 @@ Group event planning can be a very daunting task. There are so many moving parts
 and duties can be overwhelming for some. With our help, we’ll get you started with the most important parts.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## Starting Off
 
@@ -34,6 +35,7 @@ It’s also likely that you already have an idea for an event and that’s perfe
 with your team and work out any kinks within. Once you’re good to go, it’s time to move to the next step.
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## Create Your Budget
 
@@ -48,6 +50,7 @@ your event idea is feasible for your financial situation, which leads to the nex
 How are you gaining the funds for this event? Is it coming from your own pockets, are you being given a 
 budget, or are you attempting to find sponsors for the event? This is another crucial aspect of your 
 budget because as we said earlier: the amount of available money will dictate your event.
+
 ## Location, Time, and Day
 
 With your newfound budget, it’s time to solidify your group event. Before you find a location, it’s a good 
@@ -60,6 +63,7 @@ You need to make sure that the venue stays within your budget so that you still 
 together. If it’s an event with kids, make sure it is safe for them.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## The Perfect Group Event
 
@@ -68,4 +72,7 @@ need any help, be sure to take a look at our free services.  If you liked this a
 see more content like this, be sure to check out the rest of 
 [our blog](https://pitchinclub.com/blog/page/1).
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
