--- a/markdown/post0010.mdx
+++ b/markdown/post0010.mdx
@@ -20,6 +20,8 @@ personal. You will then want to determine how much you can spend on the party. S
 great idea because as you gather materials for the party, the cost can really add up. Setting a 
 budget will allow you to stay on track without breaking the bank. 
 
+<DesktopAdHoriz />
+
 ## Determine the Date, Venue and Guest List
 
 Once you've established your theme and budget, you can begin thinking of a venue and how many people 
@@ -37,6 +39,8 @@ items are great to buy before, but hold back on buying food until your event is 
 To prepare for the food and drink, plan your party food in advance to make sure the menu will appeal 
 to everyone and is enough to feed everyone. If you're using a caterer for your party, planning the food 
 and drink in advance can help you sort out who's bringing what.
+
+<DesktopAdHoriz />
 
 ## Decorate and Have Fun
 
@@ -58,4 +62,7 @@ will love. Are you looking to make the party planning process more organized and
 for our event planning and tracking tool today to help you stay on top of the details. This tool 
 can help you manage others that are pitching in while monitoring your attendee status and so much more! 
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
