--- a/markdown/post0018.mdx
+++ b/markdown/post0018.mdx
@@ -27,6 +27,7 @@ preferences, and availability. With a list of tasks available, it’s possible t
 suited.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## 2. Speak to Friends and Family
 
@@ -50,6 +51,7 @@ a hand to get in touch with you. Take the same tack with any event you’re thro
 which you’re running the event to solicit their help.
 
 <MobileAd />
+<DesktopAdHoriz />
 
 ## 4. Use Social Media
 
@@ -75,6 +77,7 @@ sign-ups you’ll get. This is a great way to get people to do the least enjoyab
 you don’t have to feel guilty about soliciting peoples’ help in the first place!
 
 <MobileAd />
+<DesktopAdSquare />
 
 ## 6. Use the 'Pitch In Club' App
 
@@ -103,4 +106,7 @@ Ready to do this the easy way? Click
 [here](https://pitchinclub.com/blog/diy-party-planning-like-a-pro)
 to read more about party-planning like a pro!
 
+<MobileAdSquare />
 <MobileAd />
+
+<DesktopAdSquare />
